--- a/chrischelle/index.html
+++ b/chrischelle/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Playfair+Display:wght@400;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alice&family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
     <title>Chrischelle</title>
@@ -18,7 +16,6 @@
         <h1>Chrischelle</h1>
         <p>Graphic Artist - Photographer - Event Organizer - Entrepreneur</p>
     </header>
-
     <main>
         <div class="row">
             <div class="col">
@@ -93,7 +90,6 @@
         </div>
         </div>
     </main>
-
     <footer>
         <h4>Follow me on</h4>
         <ul>
@@ -107,7 +103,5 @@
         <h4>Send me an email</h4>
         Chrischelle.lopez@outlook.com
     </footer>
-
 </body>
-
 </html>
